--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,12 @@
 
-
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    /* overflow-x: hidden;  */
+}
 body{
   background-color: #edf5f0;
 }
@@ -44,25 +51,20 @@ body{
 } */
 
 
-html,body{
-  height: 100%;
-  min-height: 100%;
-}
 
 
 
 @media screen and (max-width : 768px){
 
-  body,html{
-      height: 100%;
-      min-height: 100%;
-      width: 100%;
-      max-height: 100%;
-
-      
-  }
+  html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    /* overflow-x: hidden;  */
+}
   body{
-
     background-color: #edf5f0;
   }
   
