--- a/client/src/components/ContactForm/style.css
+++ b/client/src/components/ContactForm/style.css
@@ -76,5 +76,25 @@ button.contactBtn.btn.btn-primary{
     font-family: "Montserrat", sans-serif;
     width: 450px;
     color: white
+    
 
+  }
+  .contactBody{
+
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+
+  }
+
+  @media screen and (max-width : 414px){
+.contactBody{
+
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  
+}
   }
