--- a/client/src/components/Dropdown/style.css
+++ b/client/src/components/Dropdown/style.css
@@ -7,3 +7,17 @@
   margin-right: auto;
   font-size: 20px;
 }
+
+.dashBox{
+  padding-bottom: 2%
+}
+
+.mbpBox{
+  padding-bottom: 2%;
+
+}
+
+.mbpButton{
+
+  background-color: #2b3942;
+}
