--- a/client/src/pages/css/home.css
+++ b/client/src/pages/css/home.css
@@ -4,25 +4,63 @@
     overflow:auto
 } */
 
+/* Home ReactApexChart#linechart, #linechart2{
+    display: none;
+}
+div.Chart1{
+display: none;} */
+
+.meditationBody{
+
+    background-color: #cfacab;
+    padding-bottom: 15%;
+}
+
 .rightimage{
-    margin-right: 1%;
+    margin-right: 5%;
     font-family: "Montserrat", sans-serif;
     /* display: inline; */
     float: right;
     max-width: 500px;
     max-height: 500px;
-    overflow:auto
+    overflow:auto;
+    display: flex;
+    flex-flow: column;
+    width: 100%;
+    /* box-shadow: 0 6px 20px rgba(2, 90, 255, 0.17); */
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    -webkit-filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
+    filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
+    border-radius: 10px;
+    overflow: hidden;
+    text-decoration: none;
+    background: white;
+    padding: 10px 10px 10px 10px;
+    border: solid #638194 10px
     
 }
 
 .leftimage {
-    margin-left: 2%;
+    margin-left: 5%;
     font-family: "Montserrat", sans-serif;
     /* display: inline; */
     float:left;
     max-width: 500px;
     max-height: 500px;
-    overflow:auto
+    overflow:auto;
+    display: flex;
+    flex-flow: column;
+    width: 100%;
+    /* box-shadow: 0 6px 20px rgba(2, 90, 255, 0.17); */
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    -webkit-filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
+    filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
+    border-radius: 10px;
+    overflow: hidden;
+    text-decoration: none;
+    background: white;
+    padding: 10px 10px 10px 10px;
+    border: solid #638194 10px
 }
 
 
@@ -108,7 +146,7 @@ a.homeTitle2Button{
     margin-top: 0;
     font-size: 25px;
     padding: 1rem;
-    margin-bottom: 5%;
+    margin-bottom: 7%;
     
 }
 
@@ -213,6 +251,11 @@ display: block;
   margin-left: auto;
   margin-right: auto;
   margin: auto
+}
+
+#dashboard{
+/* padding-top: 1%; */
+padding-bottom: 5%;
 }
 
 /* #homeCharts{
