--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,8 +3,8 @@ html,body
 {
     width: 100%;
     height: 100%;
-    margin: 0px;
-    padding: 0px;
+    margin: 0px !important;
+    padding: 0px !important;
     /* overflow-x: hidden;  */
 }
 body{
@@ -60,12 +60,27 @@ body{
 {
     width: 100%;
     height: 100%;
-    margin: 0px;
-    padding: 0px;
-    /* overflow-x: hidden;  */
+    margin: 0 !important;
+    padding: 0 !important;
+    /* overflow: hidden;  */
 }
   body{
     background-color: #edf5f0;
   }
   
+  }
+
+  @media screen and (max-width : 414px){
+    body,html
+    {
+      width: 100%;
+      height: 100%;
+      margin: 0px !important;
+      padding: 0px !important;
+      /* overflow-x: hidden; */
+    }
+
+    body{
+      background-color: #edf5f0;
+    }
   }
