--- a/client/src/components/Charts/style.css
+++ b/client/src/components/Charts/style.css
@@ -9,10 +9,18 @@
     border: solid #2b3942;
 } */
 
+/* ReactApexChart#linechart, #linechart2{
+display: block;
+}
+div.Chart1{
+
+
+display: block;
+} */
 .Chart2 {
     margin-top: 5px;
     margin-bottom: 5px;
-    border: solid #2b3942;
+    /* border: solid #2b3942; */
     width: auto;
 
 }
@@ -21,15 +29,54 @@
 
     margin-top: 5px;
     margin-bottom: 5px;
-    border: solid #2b3942;
+    border-bottom: solid  #2b3942;
     width: auto;
 
+}
+
+
+#charts {
+
+    display: flex;
+    flex-flow: column;
+    width: 100%;
+    /* box-shadow: 0 6px 20px rgba(2, 90, 255, 0.17); */
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    -webkit-filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
+    filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
+    border-radius: 10px;
+    overflow: hidden;
+    text-decoration: none;
+    background: white;
+    padding: 10px 10px 10px 10px;
+    border: solid #638194 20px
+    
+    
 }
 @media screen and (max-width : 768px){
 
 .apexcharts-title-text{
 
     font-size: 14px;
+}
+
+#charts {
+
+    display: flex;
+    flex-flow: column;
+    width: 100%;
+    /* box-shadow: 0 6px 20px rgba(2, 90, 255, 0.17); */
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    -webkit-filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
+    filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
+    border-radius: 10px;
+    overflow: hidden;
+    text-decoration: none;
+    background: white;
+    padding: 10px 10px 10px 10px;
+    border: solid #638194 20px
+    
+    
 }
 
 }
@@ -39,5 +86,16 @@
     .apexcharts-title-text{
     
         font-size: 14px;
+    }
+
+    #charts {
+
+        display: flex;
+        flex-flow: column;
+        width: 80%;
+        /* box-shadow: 0 6px 20px rgba(2, 90, 255, 0.17); */
+    
+        
+        
     }
     }
