--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -10,7 +10,7 @@
     justify-content: center;   */
     background-color: #2b3942;
     color: white;
-    margin-top: 100px;
+    /* margin-top: 100px; */
     /* padding-bottom: 10px;
     display: block; */
     
